feat : 캐러셀 슬라이드 기능구현, 심화과제 완성 및 주석표기

--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -64,206 +64,210 @@
         </button>
     </nav>
     <main>
-        <section>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        사랑해요</br>웹파트</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
+        <button type="button" class="carousel carousel-left__btn"> < </button>
+        <section class="carousel-container">
+            <div class="carousel-section">
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">웹파트 화이팅!</h2>
+                        <p class="article__content">
+                            사랑해요</br>웹파트</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
                     </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
-                    </div>
-                </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">사랑해요 이주함!</h2>
-                    <p class="article_conten_t">
-                        사랑해요</br>웹팟짱</br>이주함
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
-                    </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">나는 바보입니다</h2>
-                    <p class="article__content">
-                        흐아암</br>졸리다</br>화이팅
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">사랑해요 이주함!</h2>
+                        <p class="article_conten_t">
+                            사랑해요</br>웹팟짱</br>이주함
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
                     </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
-                    </div>
-                </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">킹왕짱 웹파트</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
-                    </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">나는 바보입니다</h2>
+                        <p class="article__content">
+                            흐아암</br>졸리다</br>화이팅
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
                     </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
-                    </div>
-                </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
-                    </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">킹왕짱 웹파트</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
                     </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
-                    </div>
-                </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>화이팅합시다
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
-                    </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="article__card">
-                <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
-                <div class="content__container">
-                    <h2 class="article__title">웹파트 화이팅!</h2>
-                    <p class="article__content">
-                        아좌좌</br>아좌좌</br>
-                    </p>
-                    <small class="article__info">4일 전 1개의 댓글</small>
-                </div>
-                <div class="content__footer">
-                    <div class="publisher__profile">
-                        <div class="publisher__photo">K</div>
-                        <p >by <b class="publisher__name">NamjunKim</b></p> 
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">웹파트 화이팅!</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
                     </div>
-                    <div class="article__likes">
-                        <span class="material-symbols-outlined">
-                            favorite
-                        </span>
-                        <p class="like">101</p>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">웹파트 화이팅!</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
+                    </div>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">웹파트 화이팅!</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
+                    </div>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">웹파트 화이팅!</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>화이팅합시다
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
+                    </div>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="article__card">
+                    <img src="/week1/assets/INSopt_logo.png" alt="썸네일 이미지" class="thumbnail__container">
+                    <div class="content__container">
+                        <h2 class="article__title">마지막 슬라이드!</h2>
+                        <p class="article__content">
+                            아좌좌</br>아좌좌</br>
+                        </p>
+                        <small class="article__info">4일 전 1개의 댓글</small>
+                    </div>
+                    <div class="content__footer">
+                        <div class="publisher__profile">
+                            <div class="publisher__photo">K</div>
+                            <p >by <b class="publisher__name">NamjunKim</b></p> 
+                        </div>
+                        <div class="article__likes">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                            <p class="like">101</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <button type="button" class="carousel carousel-right__btn"> > </button>
     </main>
 </body>
 <script type="module" src="./velog.js"></script>
