fix: 일부 클래스명 수정2

--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -50,7 +50,7 @@
                     expand_more
                 </span>
             </button>
-            <div class="dropbox hidden">
+            <div class="dropdownbox hidden">
                 <p class="option">오늘</p>
                 <p class="option selected-menu">이번 주</p>
                 <p class="option">이번 달</p>
